feat(): first working version of rewrite

--- a/templates/angular2-model.mustache
+++ b/templates/angular2-model.mustache
@@ -1,5 +1,5 @@
 {{#imports}}
-import { {{.}} } from './{{#lower}}{{.}}{{/lower}}.model'
+import { {{.}} } from './{{#dashCase}}{{.}}{{/dashCase}}.model'
 {{/imports}}
 
 export interface {{&name}} {
