--- a/templates/angular2-models-export.mustache
+++ b/templates/angular2-models-export.mustache
@@ -1,3 +1,3 @@
 {{#definitions}}
-export { {{name}} } from './models/{{#lower}}{{name}}{{/lower}}.model';
+export { {{name}} } from './models/{{#dashCase}}{{name}}{{/dashCase}}.model';
 {{/definitions}}
