fix(): Object.entries polyfill

--- a/templates/angular2-service.mustache
+++ b/templates/angular2-service.mustache
@@ -9,7 +9,7 @@ import {
 } from './models';
 
 /**
-* Created with ngx-swagger-client-generator.
+* Created with ngx-swagger-client-generator (https://github.com/flowup/ngx-swagger-client-generator)
 */
 @Injectable()
 export class ApiClientService {
