feat(): model naming

--- a/templates/angular2-models-export.mustache
+++ b/templates/angular2-models-export.mustache
@@ -1,3 +1,5 @@
 {{#definitions}}
 export { {{name}} } from './models/{{#dashCase}}{{name}}{{/dashCase}}.model';
 {{/definitions}}
+
+export { ApiClientService } from './api-client-service';
