--- a/templates/angular2-service.mustache
+++ b/templates/angular2-service.mustache
@@ -6,7 +6,7 @@ import {
   {{#definitions}}
   {{name}}{{^last}},{{/last}}
   {{/definitions}}
-} from './models';
+} from '.';
 
 /**
 * Created with ngx-swagger-client-generator (https://github.com/flowup/ngx-swagger-client-generator)
