fix(tslint): disabled warnings

--- a/templates/angular2-model.mustache
+++ b/templates/angular2-model.mustache
@@ -1,5 +1,7 @@
+/* tslint:disable */
+
 {{#imports}}
-import { {{.}} } from './{{#dashCase}}{{.}}{{/dashCase}}.model'
+import { {{.}} } from './{{#dashCase}}{{.}}{{/dashCase}}.model';
 {{/imports}}
 
 export interface {{&name}} {
