--- a/templates/angular2-service.mustache
+++ b/templates/angular2-service.mustache
@@ -1,3 +1,5 @@
+/* tslint:disable */
+
 import { Inject, Injectable, Optional } from '@angular/core';
 import { HttpClient, HttpHeaders, HttpParams } from '@angular/common/http';
 import { Observable } from 'rxjs/Observable';
