--- a/templates/angular2-models-export.mustache
+++ b/templates/angular2-models-export.mustache
@@ -1,7 +1,7 @@
 /* tslint:disable */
 
 {{#definitions}}
-export { {{name}} } from './models/{{#dashCase}}{{name}}{{/dashCase}}.model';
+export { {{name}} } from './models/{{#fileName}}{{name}}{{/fileName}}';
 {{/definitions}}
 
 export { ApiClientService } from './api-client-service';
