--- a/templates/angular2-service.mustache
+++ b/templates/angular2-service.mustache
@@ -1,7 +1,7 @@
 /* tslint:disable */
 
 import { Inject, Injectable, Optional } from '@angular/core';
-import { HttpClient, HttpHeaders, HttpParams } from '@angular/common/http';
+import { HttpClient, HttpHeaders, HttpObserve, HttpParams } from '@angular/common/http';
 import { Observable } from 'rxjs/Observable';
 
 import {
@@ -10,25 +10,43 @@ import {
   {{/definitions}}
 } from '.';
 
+interface HttpOptions {
+  headers?: HttpHeaders | { [header: string]: string | string[] },
+  observe?: HttpObserve,
+  params?: HttpParams | { [param: string]: string | string[] },
+  reportProgress?: boolean,
+  responseType?: 'arraybuffer' | 'blob' | 'json' | 'text',
+  withCredentials?: boolean,
+}
+
 /**
-* Created with ngx-swagger-client-generator (https://github.com/flowup/ngx-swagger-client-generator)
-*/
+ * Created with ngx-swagger-client-generator (https://github.com/flowup/ngx-swagger-client-generator)
+ */
 @Injectable()
 export class ApiClientService {
 
-  private domain = '{{&domain}}';
+  private domain = 'http://localhost:8080';
+  private httpOptions: HttpOptions = {
+    headers: new HttpHeaders(),
+    params: new HttpParams()
+  };
 
-  constructor(private http: HttpClient, @Optional() @Inject('domain') domain: string ) {
+  constructor(private http: HttpClient,
+              @Optional() @Inject('domain') domain: string,
+              @Optional() @Inject('httpOptions') httpOptions: HttpOptions) {
     if (domain) {
       this.domain = domain;
+    }
+
+    if (httpOptions) {
+      this.httpOptions = httpOptions;
     }
   }
 
 {{#methods}}
-  {{&methodName}}({{#parameters}}{{&camelCaseName}}: {{typescriptType}}{{^last}}, {{/last}}{{/parameters}}): Observable<{{&response}}> {
+  {{&methodName}}({{#parameters}}{{&camelCaseName}}: {{typescriptType}}, {{/parameters}}options: HttpOptions = this.httpOptions): Observable<{{&response}}> {
     const path = `{{&backTickPath}}`;
-    const headers = new HttpHeaders();
-    let params = new HttpParams();
+
     {{#parameters}}
       {{#isQueryParameter}}
         {{#isSingleton}}
@@ -74,19 +92,19 @@ export class ApiClientService {
         {{/isSingleton}}
       {{/isHeaderParameter}}
     {{/parameters}}
-    return this.sendRequest<{{&response}}>('{{methodType}}', path, headers, params, {{#hasBodyParameters}}JSON.stringify({{#parameters}}{{#isBodyParameter}}{{&camelCaseName}}{{/isBodyParameter}}{{/parameters}}){{/hasBodyParameters}}{{^hasBodyParameters}}null{{/hasBodyParameters}});
+    return this.sendRequest<{{&response}}>('{{methodType}}', path, options, {{#hasBodyParameters}}JSON.stringify({{#parameters}}{{#isBodyParameter}}{{&camelCaseName}}{{/isBodyParameter}}{{/parameters}}){{/hasBodyParameters}}{{^hasBodyParameters}}null{{/hasBodyParameters}});
   }
 
 {{/methods}}
-  private sendRequest<T>(method: string, path: string, headers: HttpHeaders, params: HttpParams, body: any): Observable<T> {
+  private sendRequest<T>(method: string, path: string, options: HttpOptions, body: any): Observable<T> {
     if (method === 'get') {
-      return this.http.get<T>(this.domain + path, { headers: headers, params: params });
+      return this.http.get<T>(`${this.domain}${path}`, options);
     } else if (method === 'put') {
-      return this.http.put<T>(this.domain + path, body, { headers: headers, params: params });
+      return this.http.put<T>(`${this.domain}${path}`, body, options);
     } else if (method === 'post') {
-      return this.http.post<T>(this.domain + path, body, { headers: headers, params: params });
+      return this.http.post<T>(`${this.domain}${path}`, body, options);
     } else if (method === 'delete') {
-      return this.http.delete<T>(this.domain + path, { headers: headers, params: params });
+      return this.http.delete<T>(`${this.domain}${path}`, options);
     } else {
       console.error('Unsupported request: ' + method);
       return Observable.throw('Unsupported request: ' + method);
