--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -92,11 +92,11 @@ export class ApiClientService {
         {{/isSingleton}}
       {{/isHeaderParameter}}
     {{/parameters}}
-    return this.sendRequest<{{&response}}>('{{methodType}}', path, options, {{#hasBodyParameters}}JSON.stringify({{#parameters}}{{#isBodyParameter}}{{&camelCaseName}}{{/isBodyParameter}}{{/parameters}}){{/hasBodyParameters}}{{^hasBodyParameters}}null{{/hasBodyParameters}});
+    return this.sendRequest<{{&response}}>('{{methodType}}', path, options{{#parameters}}{{#isBodyParameter}}, JSON.stringify({{&camelCaseName}}){{/isBodyParameter}}{{/parameters}});
   }
 
 {{/methods}}
-  private sendRequest<T>(method: string, path: string, options: HttpOptions, body: any): Observable<T> {
+  private sendRequest<T>(method: string, path: string, options: HttpOptions, body?: any): Observable<T> {
     if (method === 'get') {
       return this.http.get<T>(`${this.domain}${path}`, options);
     } else if (method === 'put') {
