refactor(generator): helper methods
made static and functional with required return types and immutable

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -1,7 +1,7 @@
 /* tslint:disable */
 {{^isEnum}}
 {{#imports}}
-import { {{.}} } from './{{#fileName}}{{.}}{{/fileName}}';
+import { {{.}} } from './{{#renderFileName}}{{.}}{{/renderFileName}}';
 {{/imports}}
 
 export interface {{&name}} {
@@ -13,14 +13,6 @@ export interface {{&name}} {
   {{name}}: {{typescriptType}};
   {{/isArray}}
 {{/properties}}
-{{#refs}}
-  {{#isArray}}
-  {{name}}: {{typescriptType}}[];
-  {{/isArray}}
-  {{^isArray}}
-  {{name}}: {{typescriptType}};
-  {{/isArray}}
-{{/refs}}
 }
 {{/isEnum}}
 {{#isEnum}}
