--- a/templates/ngx-models-export.mustache
+++ b/templates/ngx-models-export.mustache
@@ -1,7 +1,7 @@
 /* tslint:disable */
 
 {{#definitions}}
-export { {{name}} } from './models/{{#fileName}}{{name}}{{/fileName}}';
+export { {{name}} } from './models/{{#renderFileName}}{{name}}{{/renderFileName}}';
 {{/definitions}}
 
 export { ApiClientService } from './api-client-service';
