feat(type-names): omitted unnecessary type naming postfix
closes #9

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -3,9 +3,9 @@
 {{#imports.length}}
 import {
 {{#imports}}
-  {{.}}
+  {{.}},
 {{/imports}}
-} from '..';
+} from './..';
 {{/imports.length}}
 
 export interface {{&name}} {
