--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -49,47 +49,28 @@ export class ApiClientService {
 
     {{#parameters}}
       {{#isQueryParameter}}
-        {{#isSingleton}}
-    params = params.set('{{&name}}', '{{&singleton}}' + '');
-        {{/isSingleton}}
-        {{^isSingleton}}
-          {{#isPatternType}}
-    Object.keys(parameters).forEach(function(parameterName) {
-      if (new RegExp('{{&pattern}}').test(parameterName)) {
-        params = params.set(parameterName, parameters[parameterName] + '');
-      }
-    });
-          {{/isPatternType}}
-          {{^isPatternType}}
     if ({{&camelCaseName}}) {
           {{#isArray}}
       Object.keys({{&camelCaseName}}).map(value => {
-        params = params.set('{{&name}}', value + '');
+        options.params = options.params.set('{{&name}}', `${value}`);
       });
           {{/isArray}}
           {{^isArray}}
-      params = params.set('{{&name}}', {{&camelCaseName}} + '');
+      options.params = options.params.set('{{&name}}', String({{&camelCaseName}}));
           {{/isArray}}
     }
-          {{/isPatternType}}
-        {{/isSingleton}}
       {{/isQueryParameter}}
       {{#isHeaderParameter}}
-        {{#isSingleton}}
-    headers = headers.set('{{&name}}', '{{&singleton}}' + '');
-        {{/isSingleton}}
-        {{^isSingleton}}
     if ({{&camelCaseName}}) {
           {{#isArray}}
       Object.keys({{&camelCaseName}}).map(value => {
-        headers = headers.set('{{&name}}', value + '');
+        options.headers = options.headers.set('{{&name}}', `${value}`);
       });
           {{/isArray}}
           {{^isArray}}
-      headers = headers.set('{{&name}}', {{&camelCaseName}} + '');
+      options.headers = options.headers.set('{{&name}}', String({{&camelCaseName}}));
           {{/isArray}}
     }
-        {{/isSingleton}}
       {{/isHeaderParameter}}
     {{/parameters}}
     return this.sendRequest<{{&response}}>('{{methodType}}', path, options{{#parameters}}{{#isBodyParameter}}, JSON.stringify({{&camelCaseName}}){{/isBodyParameter}}{{/parameters}});
