feat(domain): relative path instead of localhost
* Default to relative path instead of localhost for domain.

* Remove window declare (not needed). Use shorter syntax for setting default address

* Implement default hostname in generator instead of template

* Fixes to domain generation

* Added commnets to generator

* Undo unintended change to template

--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -24,11 +24,12 @@ interface HttpOptions {
 export class ApiClientService {
 
   readonly options: HttpOptions;
-  private domain = 'http://localhost:8080';
+  private domain: string = `{{&domain}}`;
 
   constructor(private http: HttpClient,
               @Optional() @Inject('domain') domain: string,
               @Optional() @Inject('httpOptions') options: HttpOptions) {
+
     if (domain) {
       this.domain = domain;
     }
