feat(api-client): models imported as module
- eliminates need for importing each model
- fixes unused model import issue

fixes #22

--- a/templates/ngx-models-export.mustache
+++ b/templates/ngx-models-export.mustache
@@ -1,7 +1,5 @@
 /* tslint:disable */
 
 {{#definitions}}
-export { {{name}} } from './models/{{#renderFileName}}{{name}}{{/renderFileName}}';
+export { {{name}} } from './{{#renderFileName}}{{name}}{{/renderFileName}}';
 {{/definitions}}
-
-export { ApiClientService } from './api-client-service';
