fix(models): enum property names same as values
fixes #18

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -23,7 +23,7 @@ export interface {{&name}} {
 
 export enum {{&name}} {
 {{#properties}}
-  {{camelCaseName}} = "{{name}}",
+  {{name}} = "{{name}}",
 {{/properties}}
 }
 {{/isEnum}}
