refactor(): renamed repo and npm package

--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -14,7 +14,7 @@ interface HttpOptions {
 }
 
 /**
- * Created with ngx-swagger-client-generator (https://github.com/flowup/ngx-swagger-client-generator)
+ * Created with https://github.com/flowup/api-client-generator
  */
 @Injectable()
 export class ApiClientService {
