--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -68,17 +68,18 @@ export class APIClient {
 
 {{/methods}}
   private sendRequest<T>(method: string, path: string, options: HttpOptions, body?: any): Observable<T> {
-    if (method === 'GET') {
-      return this.http.get<T>(`${this.domain}${path}`, options);
-    } else if (method === 'PUT') {
-      return this.http.put<T>(`${this.domain}${path}`, body, options);
-    } else if (method === 'POST') {
-      return this.http.post<T>(`${this.domain}${path}`, body, options);
-    } else if (method === 'DELETE') {
-      return this.http.delete<T>(`${this.domain}${path}`, options);
-    } else {
-      console.error('Unsupported request: ' + method);
-      return Observable.throw('Unsupported request: ' + method);
+    switch (method) {
+      case 'GET':
+        return this.http.get<T>(`${this.domain}${path}`, options);
+      case 'PUT':
+        return this.http.put<T>(`${this.domain}${path}`, body, options);
+      case 'POST':
+        return this.http.post<T>(`${this.domain}${path}`, body, options);
+      case 'DELETE':
+        return this.http.delete<T>(`${this.domain}${path}`, options);
+      default:
+        console.error(`Unsupported request: ${method}`);
+        return Observable.throw(`Unsupported request: ${method}`);
     }
   }
 }
