fix(api-client): array method parameters and headers appended
fixes #36

Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -10,12 +10,7 @@ import {
 
 export interface {{&name}} {
 {{#properties}}
-  {{#isArray}}
-  {{name}}: {{typescriptType}}[];
-  {{/isArray}}
-  {{^isArray}}
-  {{name}}: {{typescriptType}};
-  {{/isArray}}
+  {{name}}: {{typescriptType}}{{#isArray}}[]{{/isArray}};
 {{/properties}}
 }
 {{/isEnum}}
