--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -33,7 +33,7 @@ export class APIClient {
   }
 
 {{#methods}}
-  {{&methodName}}({{#parameters}}{{&camelCaseName}}: {{importType}}, {{/parameters}}options?: HttpOptions): Observable<{{&response}}> {
+  {{&methodName}}({{#parameters}}{{&camelCaseName}}: {{importType}}{{#isArray}}[]{{/isArray}}, {{/parameters}}options?: HttpOptions): Observable<{{&response}}> {
     const path = `{{&path}}`;
     options = {...this.options, ...options};
 
@@ -41,9 +41,7 @@ export class APIClient {
       {{#isQueryParameter}}
     if ({{&camelCaseName}}) {
           {{#isArray}}
-      Object.keys({{&camelCaseName}}).map(value => {
-        options.params = options.params.set('{{&name}}', `${value}`);
-      });
+      options.params = {{&camelCaseName}}.reduce((acc, cur) => acc.append('{{&name}}', `${cur}`), options.params);
           {{/isArray}}
           {{^isArray}}
       options.params = options.params.set('{{&name}}', String({{&camelCaseName}}));
@@ -53,9 +51,7 @@ export class APIClient {
       {{#isHeaderParameter}}
     if ({{&camelCaseName}}) {
           {{#isArray}}
-      Object.keys({{&camelCaseName}}).map(value => {
-        options.headers = options.headers.set('{{&name}}', `${value}`);
-      });
+      options.headers = options.headers.set('{{&name}}', {{&camelCaseName}}.map(value => `${value}`));
           {{/isArray}}
           {{^isArray}}
       options.headers = options.headers.set('{{&name}}', String({{&camelCaseName}}));
