feat(enums): numeric enums, using keys from description
closes #28

Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -15,10 +15,20 @@ export interface {{&name}} {
 }
 {{/isEnum}}
 {{#isEnum}}
+  {{#isNumeric}}
 
 export enum {{&name}} {
-{{#properties}}
-  {{name}} = "{{name}}",
-{{/properties}}
+    {{#properties}}
+  {{name}} = {{value}},
+    {{/properties}}
 }
+  {{/isNumeric}}
+  {{^isNumeric}}
+
+export enum {{&name}} {
+    {{#properties}}
+  {{name}} = "{{value}}",
+    {{/properties}}
+}
+  {{/isNumeric}}
 {{/isEnum}}
