feat(api-client): support for optional method parameters
closes #8

Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -39,7 +39,9 @@ export class APIClient {
   {{&methodName}}(
   {{#parameters.length}}
     args: {
-      {{#parameters}}{{&camelCaseName}}: {{importType}}{{#isArray}}[]{{/isArray}},{{/parameters}}
+      {{#parameters}}
+      {{&camelCaseName}}{{^isRequired}}?{{/isRequired}}: {{importType}}{{#isArray}}[]{{/isArray}},
+      {{/parameters}}
     },
   {{/parameters.length}}
     options?: HttpOptions
