--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -51,9 +51,11 @@ export class APIClient {
 
     {{#parameters}}
       {{#isQueryParameter}}
-    if (args.{{&camelCaseName}}) {
+    if ('{{&camelCaseName}}' in args) {
           {{#isArray}}
-      options.params = args.{{&camelCaseName}}.reduce((acc, cur) => acc.append('{{&name}}', `${cur}`), options.params);
+      if (args.{{&camelCaseName}} && args.{{&camelCaseName}}.length) {
+        options.params = args.{{&camelCaseName}}.reduce((acc, cur) => acc.append('{{&name}}', `${cur}`), options.params);
+      }
           {{/isArray}}
           {{^isArray}}
       options.params = options.params.set('{{&name}}', String(args.{{&camelCaseName}}));
@@ -61,9 +63,11 @@ export class APIClient {
     }
       {{/isQueryParameter}}
       {{#isHeaderParameter}}
-    if (args.{{&camelCaseName}}) {
+    if ('{{&camelCaseName}}' in args) {
           {{#isArray}}
-      options.headers = options.headers.set('{{&name}}', args.{{&camelCaseName}}.map(value => `${value}`));
+      if (args.{{&camelCaseName}} && args.{{&camelCaseName}}.length) {
+        options.headers = options.headers.set('{{&name}}', args.{{&camelCaseName}}.map(value => `${value}`));
+      }
           {{/isArray}}
           {{^isArray}}
       options.headers = options.headers.set('{{&name}}', String(args.{{&camelCaseName}}));
