feat(models): extend interface with model in allOf property definition
closes #53

Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -8,7 +8,7 @@ import {
 } from './..';
 {{/imports.length}}
 
-export interface {{&name}} {
+export interface {{&name}} {{#extend}}extends {{.}} {{/extend}}{
 {{#properties}}
   {{name}}: {{typescriptType}}{{#isArray}}[]{{/isArray}};
 {{/properties}}
