--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -23,7 +23,7 @@ type APIHttpOptions = HttpOptions & {
 @Injectable()
 export class APIClient {
 
-  readonly options: APIHttpOptions;
+  private readonly options: APIHttpOptions;
 
   private readonly domain: string = `{{&domain}}`;
 
