fix(models): escape keys with non-word characters and ones starting with a number
fixes #54

Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -10,7 +10,7 @@ import {
 
 export interface {{&name}} {{#extend}}extends {{.}} {{/extend}}{
 {{#properties}}
-  {{name}}: {{typescriptType}}{{#isArray}}[]{{/isArray}};
+  {{&name}}: {{typescriptType}}{{#isArray}}[]{{/isArray}};
 {{/properties}}
 }
 {{/isEnum}}
