feat(api-client): API method descriptions
#29

--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -44,7 +44,11 @@ export class APIClient {
   }
 
 {{#methods}}
-  {{&methodName}}(
+  {{#description}}
+  /**
+   * {{&.}}
+   */
+{{/description}}  {{&methodName}}(
   {{#parameters.length}}
     args: {
       {{#parameters}}
