fix(enums): numeric enums values
Signed-off-by: Vojtech Masek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -26,7 +26,7 @@ import {
  */
 {{/description}}export enum {{&name}} {
     {{#properties}}
-  {{name}} = {{#isNumeric}}"{{value}}"{{/isNumeric}}{{^isNumeric}}{{value}}{{/isNumeric}},
+  {{name}} = {{#isNumeric}}{{value}}{{/isNumeric}}{{^isNumeric}}"{{value}}"{{/isNumeric}},
     {{/properties}}
 }
 {{/isEnum}}
