--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -21,7 +21,7 @@ type APIHttpOptions = HttpOptions & {
  * Created with https://github.com/flowup/api-client-generator
  */
 @Injectable()
-export class APIClient {
+export class {{&serviceName}} {
 
   readonly options: APIHttpOptions;
 
