feat(models) interface additional properties represented as string key map
closes #61

Signed-off-by: Vojtech Mašek <vojtech.masek@flowup.cz>

--- a/templates/ngx-model.mustache
+++ b/templates/ngx-model.mustache
@@ -14,7 +14,7 @@ import {
  */
 {{/description}}export interface {{&name}} {{#extend}}extends {{.}} {{/extend}}{
 {{#properties}}
-  {{&name}}: {{typescriptType}}{{#isArray}}[]{{/isArray}};{{#description}}  // {{&.}}{{/description}}
+  {{&name}}: {{#isDictionary}}{ [key: string]: {{typescriptType}} }{{/isDictionary}}{{^isDictionary}}{{typescriptType}}{{/isDictionary}}{{#isArray}}[]{{/isArray}};{{#description}}  // {{&.}}{{/description}}
 {{/properties}}
 }
 {{/isEnum}}
