--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -3,7 +3,7 @@
 import { HttpClient, HttpHeaders, HttpParams } from '@angular/common/http';
 import { Inject, Injectable, InjectionToken, Optional } from '@angular/core';
 import { Observable, throwError } from 'rxjs';
-import { DefaultHttpOptions, HttpOptions } from './';
+import { DefaultHttpOptions, HttpOptions, {{&interfaceName}} } from './';
 
 {{#definitions.length}}
 import * as models from './models';
@@ -21,7 +21,7 @@ type APIHttpOptions = HttpOptions & {
  * Created with https://github.com/flowup/api-client-generator
  */
 @Injectable()
-export class {{&serviceName}} {
+export class {{&serviceName}} implements {{&interfaceName}} {
 
   readonly options: APIHttpOptions;
 
