--- a/templates/ngx-service.mustache
+++ b/templates/ngx-service.mustache
@@ -25,13 +25,13 @@ export class {{&serviceName}} implements {{&interfaceName}} {
 
   readonly options: APIHttpOptions;
 
-  private readonly domain: string = `{{&domain}}`;
+  readonly domain: string = `{{&domain}}`;
 
   constructor(private readonly http: HttpClient,
-              @Optional() @Inject(USE_DOMAIN) domain: string,
-              @Optional() @Inject(USE_HTTP_OPTIONS) options: DefaultHttpOptions) {
+              @Optional() @Inject(USE_DOMAIN) domain?: string,
+              @Optional() @Inject(USE_HTTP_OPTIONS) options?: DefaultHttpOptions) {
 
-    if (domain) {
+    if (domain != null) {
       this.domain = domain;
     }
 
